--- a/app/templates/navigation.ejs
+++ b/app/templates/navigation.ejs
@@ -5,8 +5,8 @@
   </a>
 
   <small>
-    <a id="about" class="info-link" href="/about.html">👀About</a> /
-    <a id="works" class="info-link" href="/works.html">🔥Works</a> /
-    <a id="articles" class="info-link" href="/articles.html">📚Articles</a>
+    <a id="about" class="info-link" href="/about.html">👀 Sobre Mi</a> /
+    <a id="works" class="info-link" href="/works.html">🔥 Trabajos</a> /
+    <a id="articles" class="info-link" href="/articles.html">📚 Articulos</a>
   </small>
 </nav>
